Fixed color picker alignment

--- a/app/assets/stylesheets/indexstyle.css.scss
+++ b/app/assets/stylesheets/indexstyle.css.scss
@@ -235,3 +235,7 @@ div ul li{
 	font-size: 120%;
 }
 
+#colorvar {
+	top: 4px;
+}
+
